# EasyOTP

./: .gitignore  EasyOTP.cer  LEARNINGS.md  QUICKSTART.md  README.md  UI_DESIGN.md  VALIDATION.md  pyproject.toml  release-notes-v0.2.2.md
.github/workflows/: build-linux.yml  build-macos.yml  build-raspberrypi.yml  build-windows.yml
easyotp/: __init__.py  main.py  otp.py  qr_scanner.py  storage.py
