[project]
name = "easyotp"
version = "0.1.0"
description = "A simple Timed OTP (TOTP) application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flet>=0.24.0",
    "pyotp>=2.9.0",
    "cryptography>=42.0.4",
    "pyperclip>=1.9.0",
    "pillow>=10.3.0",
    "pyzbar>=0.1.9",
    "opencv-python>=4.8.1.78",
]

[project.scripts]
easyotp = "easyotp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easyotp"]
