[project]
name = "easyotp"
version = "0.1.0"
description = "A simple Timed OTP (TOTP) application"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "flet==0.18.0",
    "pyotp==2.8.0",
    "cryptography==41.0.3",
    "pyperclip==1.8.2",
    "pillow==9.5.0",
    "pyzbar==0.1.9",
    "opencv-python==4.7.0.72",
]

[project.scripts]
easyotp = "easyotp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easyotp"]
